objects/Invoice_Item__c.object
<CustomObject>
    <fields>
        <fullName>Gross_Item_Total_Price__c</fullName>
        <label>Gross Item Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gross_Unit_Price__c</fullName>
        <label>Gross Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>InvoiceId__c</fullName>
        <label>Invoice Id</label>
        <referenceTo>Invoice__c</referenceTo>
        <relationshipLabel>Invoice Items</relationshipLabel>
        <relationshipName>Invoice_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Item_Total_VAT_Price__c</fullName>
        <label>Item Total VAT Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Item_Total_Price__c</fullName>
        <label>Net Item Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Unit_Price__c</fullName>
        <label>Net Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Order_Product__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Order Product</label>
        <referenceTo>OrderItem</referenceTo>
        <relationshipLabel>Invoice Items</relationshipLabel>
        <relationshipName>Invoice_Items</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Invoice Items</relationshipLabel>
        <relationshipName>Invoice_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VAT_Rate__c</fullName>
        <label>VAT Rate</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Invoice Item</label>
    <nameField>
        <label>Invoice Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoice Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>